--- a/Registro.html
+++ b/Registro.html
@@ -7,22 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="module" src="js/registro.js"></script>
-    <!-- Agregar el script de Google Forms -->
-    <script src="https://apis.google.com/js/api.js"></script>
-    <style>
-        .notification {
-            display: none;
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            padding: 15px 20px;
-            border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            z-index: 1000;
-        }
-    </style>
 </head>
 <body>
     <div id="notification" class="notification"></div>
@@ -111,12 +95,24 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña</label>
-                        <input type="password" id="password" name="password" required>
+                        <input 
+                            type="password" 
+                            id="password" 
+                            name="password" 
+                            autocomplete="new-password" 
+                            required
+                        >
                         <div class="password-strength"></div>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword">Confirmar Contraseña</label>
-                        <input type="password" id="confirmPassword" name="confirmPassword" required>
+                        <input 
+                            type="password" 
+                            id="confirmPassword" 
+                            name="confirmPassword" 
+                            autocomplete="new-password" 
+                            required
+                        >
                     </div>
                 </div>
             </div>
